more padding fixes and text align left

--- a/web/app/themes/blank/src/scss/layout/_demo.scss
+++ b/web/app/themes/blank/src/scss/layout/_demo.scss
@@ -27,6 +27,10 @@
 			padding: 0px 30px;
 		}
 
+		@include breakpoint(md) {
+			margin-top: 0px;
+		}
+
 		h3 {
 			margin: 30px 0px;
 		}
