--- a/web/app/themes/blank/src/scss/layout/_home.scss
+++ b/web/app/themes/blank/src/scss/layout/_home.scss
@@ -108,7 +108,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
   @include breakpoint(md){
     align-items: flex-start;
   }
