--- a/web/app/themes/blank/src/scss/layout/_pricing.scss
+++ b/web/app/themes/blank/src/scss/layout/_pricing.scss
@@ -21,6 +21,12 @@
 		}
 	}
 
+	.compare_header {
+		@include breakpoint(md) {
+			text-align: left;
+		}
+	}
+
 	.container_pricing {
 		.title_content {
 			margin-bottom: 0;
